--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,18 +33,12 @@ body {
 }
 
 body {
+  background-color: var(--mat-app-background-color);
+  color: var(--mat-app-text-color);
   font-family: IRANSansX, Roboto, "Helvetica Neue", sans-serif;
   direction: rtl;
   margin: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-input,
-textarea {
-  font-family: IRANSansX !important;
+  * {
+    margin: 0;
+  }
 }
