--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,54 +1,61 @@
 .container {
-  display: flex;
   height: 100%;
-  gap: 1rem;
 
-  .header {
-    width: 22.5rem;
-    padding: 2rem 1rem;
+  .sideNav {
+    width: 18rem;
 
-    .top-header {
-      display: flex;
-      gap: 1rem;
-      padding: 2rem;
-
-      .logo {
-        height: 3rem;
-      }
-      .titles {
-        display: flex;
-        flex-direction: column;
-        .name {
-          font-weight: bold;
-        }
-      }
-    }
-    .navigation {
+    .header {
+      padding: 4rem 0;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
-      width: 100%;
-      box-sizing: border-box;
+      gap: 2rem;
+      border-radius: 2rem 0 0 2rem;
       align-items: center;
-      padding: 0 3rem;
+      box-sizing: border-box;
+      height: 100%;
 
-      .link {
+      .top-header {
         display: flex;
-        align-items: center;
-        gap: 0.25rem;
-        color: var(--mat-app-text-color);
-        padding: 0.5rem;
-        border: 1px solid var(--mat-app-text-color);
-        border-radius: 0.5rem;
-        width: 100%;
-        justify-content: center;
+        gap: 1rem;
 
-        &:hover {
-          background-color: rgba(255, 255, 255, 0.1);
+        .logo {
+          height: 3rem;
         }
+        .titles {
+          display: flex;
+          flex-direction: column;
+          .name {
+            font-weight: bold;
+          }
+        }
+      }
+      .navigation {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        align-items: center;
 
-        .icon {
-          font-size: 1.75rem;
+        .link {
+          width: 66%;
+
+          &.active {
+            background: #2667ff33;
+          }
+
+          .linkText {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 0.25rem;
+            color: var(--mat-app-text-color);
+
+            .icon {
+              font-size: 1.75rem;
+            }
+          }
         }
       }
     }
@@ -56,14 +63,22 @@
 
   .main {
     width: 100%;
-    padding: 2rem 0 2rem 2rem;
+    padding: 2rem;
+    box-sizing: border-box;
 
-    .card {
-      height: 100%;
-      width: 100%;
-      border-radius: 1rem;
-      background-color: var(--mat-autocomplete-background-color);
-      box-shadow: 3px 5px 5px 0px rgba(0, 0, 0, 0.1);
-    }
+    // .card {
+    //   height: 100%;
+    //   width: 100%;
+    //   border-radius: 1rem;
+    //   background-color: var(--mat-autocomplete-background-color);
+    //   box-shadow: 3px 5px 5px 0px rgba(0, 0, 0, 0.1);
+    // }
   }
+}
+
+.menuButton {
+  position: absolute;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  z-index: 1;
 }
