--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,12 @@
       </div>
       <nav class="navigation">
         @for (item of menu; track $index) {
-        <a href="{{ item.url }}" mat-button class="link">
+        <a
+          mat-button
+          class="link"
+          routerLink="{{ item.url }}"
+          routerLinkActive="active"
+        >
           <div class="linkText">
             <span class="material-symbols-rounded icon">
               {{ item.icon }}
@@ -24,10 +29,32 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <main class="main"></main>
+    <main class="main">
+      <div class="mainTop">
+        <h1 class="title">صفحه اصلی</h1>
+        <div class="toolbar">
+          <button
+            type="button"
+            class="toolbarButton"
+            (click)="toggleTheme()"
+            matTooltip="تغییر تم سایت"
+          >
+            <span class="material-symbols-rounded">{{ themeIcon }}</span>
+          </button>
+          <button
+            type="button"
+            (click)="drawer.toggle()"
+            class="toolbarButton"
+            matTooltip="باز/بستن منو"
+          >
+            <span class="material-symbols-rounded">menu</span>
+          </button>
+        </div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="outlet-content">
+        <router-outlet></router-outlet>
+      </div>
+    </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<button type="button" mat-mini-fab (click)="drawer.toggle()" class="menuButton">
-  <span class="material-symbols-rounded">menu</span>
-</button>
