fix(main-page): added about section and works section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <img src="{{ logoUrl }}" alt="" class="logo" />
         <div class="titles">
           <span class="name">{{ titleName }}</span>
-          <span>{{ titleDesc }}</span>
+          <span class="description">{{ titleDesc }}</span>
         </div>
       </div>
       <nav class="navigation">
@@ -31,7 +31,7 @@
   <mat-sidenav-content>
     <main class="main">
       <div class="mainTop">
-        <h1 class="title">صفحه اصلی</h1>
+        <h1 class="title">{{ pageTitle }}</h1>
         <div class="toolbar">
           <button
             type="button"
