--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,8 @@
 
   .sideNav {
     width: 18rem;
+    box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.07),
+      0 10px 20px -2px rgba(0, 0, 0, 0.04);
 
     .header {
       padding: 4rem 0;
@@ -24,8 +26,15 @@
         .titles {
           display: flex;
           flex-direction: column;
+
           .name {
             font-weight: bold;
+            font-size: 1.25rem;
+          }
+
+          .description {
+            font-weight: lighter;
+            font-size: 0.85rem;
           }
         }
       }
@@ -39,7 +48,9 @@
         align-items: center;
 
         .link {
-          width: 66%;
+          width: 80%;
+          justify-content: start;
+          padding: 1.5rem 1rem;
 
           &.active {
             background: #2667ff33;
@@ -47,13 +58,13 @@
 
           .linkText {
             display: flex;
-            justify-content: center;
             align-items: center;
-            gap: 0.25rem;
+            gap: 0.5rem;
             color: var(--mat-app-text-color);
+            font-size: 1rem;
 
             .icon {
-              font-size: 1.75rem;
+              font-size: 2rem;
             }
           }
         }
@@ -63,7 +74,7 @@
 
   .main {
     width: 100%;
-    padding: 2rem;
+    padding: 2.5rem;
     box-sizing: border-box;
 
     .mainTop {
@@ -77,6 +88,7 @@
         border-radius: 5rem;
         display: flex;
         gap: 0.5rem;
+        box-shadow: var(--small-shadow);
 
         .toolbarButton {
           display: flex;
@@ -91,7 +103,7 @@
     }
 
     .outlet-content {
-      padding-block-start: 2rem;
+      padding-block-start: 2.5rem;
     }
   }
 }
