--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -1,1 +1,46 @@
-<h3>سلاااااااااااااااااام از صفحه اصلی 😂😁😀</h3>
+<div class="container">
+  <div class="card">
+    <section class="about">
+      <img
+        src="{{ aboutMeImage }}"
+        alt="مجتبی عرفان راد"
+        class="about-image mat-elevation-z4"
+      />
+      <div class="about-text">
+        <h1 class="about-title">سلام، مجتبی عرفان راد هستم.</h1>
+        <p class="about-description">
+          توسعه دهنده {{ age }} ساله ساکن اصفهان، عاشق کامپیوتر و برنامه نویسی و
+          یادگیری، بیش از {{ expYears }} سال از اولین خط کدی که زدم میگذره حتما
+          یه نگاهی به نمونه کارهام بنداز :)
+        </p>
+      </div>
+    </section>
+    <section class="works">
+      <div class="works-title-container">
+        <a href="#" class="works-title">
+          نمونه کار
+          <span class="material-symbols-rounded"> arrow_left_alt </span>
+        </a>
+      </div>
+      <div class="works-container">
+        @for (work of works; track $index) {
+        <div class="work-card">
+          <img
+            src="{{ work.image }}"
+            alt="{{ work.name }}"
+            class="work-image"
+          />
+          <div class="work-title">{{ work.name }}</div>
+          <div class="work-tags">
+            <mat-chip-set>
+              @for (tag of work.tags; track $index) {
+              <mat-chip>{{ tag }}</mat-chip
+              >}
+            </mat-chip-set>
+          </div>
+        </div>
+        }
+      </div>
+    </section>
+  </div>
+</div>
