--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,18 @@
   --mat-sidenav-content-background-color: #1f1f23;
   --mat-sidenav-container-background-color: #292a2d;
 
+  --card-background: #303034;
+
+  --small-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.07),
+    0 10px 20px -2px rgba(0, 0, 0, 0.04);
+
   body[data-theme="light"] {
     @include mat.all-component-colors(theme.$light-theme);
 
     --mat-sidenav-content-background-color: #efedf1;
-    --mat-sidenav-container-background-color: #fbf8fd;
+    --mat-sidenav-container-background-color: #f2f0f4;
+
+    --card-background: #f2f0f4;
   }
 }
 
