fix(main-page): added posts and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,5 +56,10 @@
         <router-outlet></router-outlet>
       </div>
     </main>
+    <footer class="footer">
+      <div class="footer-container">
+        طراحی و پیاده سازی شده توسط مجتبی عرفان راد 😄❤
+      </div>
+    </footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
