--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -82,9 +82,13 @@
       justify-content: space-between;
       padding-block-end: 2rem;
 
+      .title {
+        font-size: 1.75rem;
+      }
+
       .toolbar {
         background-color: var(--mat-sidenav-container-background-color);
-        padding: 0.75rem;
+        padding: 0.5rem 0.75rem;
         border-radius: 5rem;
         display: flex;
         gap: 0.5rem;
@@ -106,11 +110,18 @@
       padding-block-start: 2.5rem;
     }
   }
-}
 
-.menuButton {
-  position: absolute;
-  bottom: 1.5rem;
-  right: 1.5rem;
-  z-index: 1;
+  .footer {
+    padding: 2.5rem;
+    padding-bottom: 0;
+
+    .footer-container {
+      background-color: var(--mat-sidenav-container-background-color);
+      border-start-start-radius: 1.5rem;
+      border-start-end-radius: 1.5rem;
+      padding: 1rem 2rem;
+      text-align: center;
+      box-shadow: var(--small-shadow);
+    }
+  }
 }
