--- a/src/app/main/main-page/main-page.component.scss
+++ b/src/app/main/main-page/main-page.component.scss
@@ -33,12 +33,12 @@
           flex-direction: column;
 
           .about-title {
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: bold;
           }
 
           .about-description {
-            font-size: 1.5rem;
+            font-size: 1.25rem;
             font-weight: normal;
           }
         }
@@ -64,33 +64,109 @@
         .works-container {
           display: flex;
           justify-content: space-around;
+          padding-top: 1.5rem;
 
           .work-card {
-            padding-top: 1.5rem;
-            max-width: 5rem;
             position: relative;
-            min-width: 17.5rem;
+            width: 17.5rem;
             border-radius: 0.5rem;
+            background-color: var(--card-image-bg);
+            box-shadow: var(--small-shadow);
+            display: flex;
 
             .work-image {
               width: 100%;
               border-radius: inherit;
-              filter: brightness(0.3);
+              opacity: 0.3;
             }
 
             .work-title {
               position: absolute;
               font-weight: bold;
-              top: 2.5rem;
+              top: 1.5rem;
               width: 100%;
               text-align: center;
             }
 
             .work-tags {
               width: 100%;
-              bottom: 1rem;
+              bottom: 0.75rem;
               position: absolute;
-              right: 1rem;
+              left: 1rem;
+              direction: ltr;
+            }
+          }
+        }
+      }
+
+      .posts {
+        width: 100%;
+
+        .posts-title-container {
+          text-align: center;
+
+          .posts-title {
+            border-bottom: 1px solid var(--mat-app-text-color);
+            padding-inline: 0.5rem;
+            display: inline-flex;
+            align-items: center;
+            color: var(--mat-app-text-color);
+            font-size: 1.15rem;
+            font-weight: bold;
+            padding-bottom: 0.1rem;
+          }
+        }
+        .posts-container {
+          display: flex;
+          justify-content: space-around;
+          padding-top: 1.5rem;
+
+          .post-card {
+            width: 17.5rem;
+            border-radius: 0.5rem;
+            display: flex;
+            flex-direction: column;
+            border: 1px solid var(--card-border-color);
+
+            .post-image {
+              width: 100%;
+              border-start-start-radius: inherit;
+              border-start-end-radius: inherit;
+            }
+
+            .post-detail {
+              padding: 0.75rem;
+              text-align: center;
+              display: flex;
+              flex-direction: column;
+              gap: 1rem;
+
+              .post-title {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+              }
+
+              .post-footer {
+                display: flex;
+                gap: 0.75rem;
+                font-size: 0.75rem;
+
+                .post-footer-component {
+                  display: flex;
+                  gap: 0.25rem;
+                  justify-content: center;
+                  align-items: center;
+
+                  .text {
+                    height: 1rem;
+                  }
+
+                  .material-symbols-rounded {
+                    font-size: 1rem;
+                  }
+                }
+              }
             }
           }
         }
