--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@
   --mat-sidenav-container-background-color: #292a2d;
 
   --card-background: #303034;
+  --card-image-bg: #000;
+  --card-border-color: #46464a;
 
   --small-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.07),
     0 10px 20px -2px rgba(0, 0, 0, 0.04);
@@ -21,6 +23,8 @@
     --mat-sidenav-container-background-color: #f2f0f4;
 
     --card-background: #f2f0f4;
+    --card-image-bg: #fff;
+    --card-border-color: #acaaaf;
   }
 }
 
@@ -56,6 +60,7 @@ body {
   }
   a {
     text-decoration: none;
+    color: var(--mat-app-text-color);
   }
 }
 
@@ -63,4 +68,8 @@ body {
 .mat-mdc-outlined-button,
 .mat-mdc-unelevated-button {
   font-family: inherit !important;
+}
+
+.mat-mdc-tooltip {
+  direction: rtl;
 }
