--- a/src/app/main/components/main-page/main-page.component.scss
+++ b/src/app/main/components/main-page/main-page.component.scss
@@ -49,6 +49,7 @@
 
         .works-title-container {
           text-align: center;
+          padding-block-end: 1.5rem;
 
           .works-title {
             border-bottom: 1px solid var(--mat-app-text-color);
@@ -64,7 +65,6 @@
         .works-container {
           display: flex;
           justify-content: space-around;
-          padding-top: 1.5rem;
 
           .work-card {
             position: relative;
@@ -104,6 +104,7 @@
 
         .posts-title-container {
           text-align: center;
+          padding-block-end: 1.5rem;
 
           .posts-title {
             border-bottom: 1px solid var(--mat-app-text-color);
@@ -119,7 +120,6 @@
         .posts-container {
           display: flex;
           justify-content: space-around;
-          padding-top: 1.5rem;
 
           .post-card {
             width: 17.5rem;
@@ -166,6 +166,128 @@
                     font-size: 1rem;
                   }
                 }
+              }
+            }
+          }
+        }
+      }
+
+      .store {
+        width: 100%;
+
+        .store-title-container {
+          text-align: center;
+          padding-block-end: 1.5rem;
+
+          .store-title {
+            border-bottom: 1px solid var(--mat-app-text-color);
+            padding-inline: 0.5rem;
+            display: inline-flex;
+            align-items: center;
+            color: var(--mat-app-text-color);
+            font-size: 1.15rem;
+            font-weight: bold;
+            padding-bottom: 0.1rem;
+          }
+        }
+        .store-container {
+          display: flex;
+          justify-content: space-around;
+
+          .product-card {
+            width: 17.5rem;
+            border-radius: 0.5rem;
+            display: flex;
+            flex-direction: column;
+            border: 1px solid var(--card-border-color);
+
+            .product-image {
+              width: 100%;
+              border-start-start-radius: inherit;
+              border-start-end-radius: inherit;
+            }
+
+            .product-detail {
+              padding: 0.75rem;
+              text-align: center;
+              display: flex;
+              flex-direction: column;
+              gap: 1rem;
+
+              .product-title {
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+              }
+
+              .product-footer {
+                display: flex;
+                gap: 0.75rem;
+                font-size: 0.75rem;
+
+                .product-footer-component {
+                  display: flex;
+                  gap: 0.25rem;
+                  justify-content: center;
+                  align-items: center;
+
+                  .text {
+                    height: 1rem;
+                  }
+
+                  .material-symbols-rounded {
+                    font-size: 1rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .contact {
+        width: 100%;
+
+        .contact-title-container {
+          text-align: center;
+          padding-block-end: 1.5rem;
+
+          .contact-title {
+            border-bottom: 1px solid var(--mat-app-text-color);
+            padding-inline: 0.5rem;
+            display: inline-flex;
+            align-items: center;
+            color: var(--mat-app-text-color);
+            font-size: 1.15rem;
+            font-weight: bold;
+            padding-bottom: 0.1rem;
+          }
+        }
+
+        .contact-form-container {
+          display: flex;
+          gap: 2rem;
+
+          .contact-form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            width: 85%;
+          }
+
+          .contact-form-description {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
+
+            .contact-details {
+              display: flex;
+              gap: 0.25rem;
+
+              .contact-details-title {
+                display: flex;
+                gap: 0.125rem;
               }
             }
           }
