feat(works): added works main page, added paginator component

--- a/src/app/main/components/main-page/main-page.component.html
+++ b/src/app/main/components/main-page/main-page.component.html
@@ -148,10 +148,9 @@
           <button mat-flat-button type="submit">ارسال</button>
         </form>
         <div class="contact-form-description">
-          <p>سلام، وقت بخیر</p>
+          <p>سلام، وقت بخیر.</p>
           <p>لطفا پس از شنیدن صدای بوق پیغام خود را بگذارید.</p>
           <strong>*بیب*</strong>
-          <hr />
           <p class="contact-details">
             <strong class="contact-details-title">
               <span class="material-symbols-rounded"> mail </span> ایمیل :
