--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,12 +54,12 @@
       </div>
       <mat-divider></mat-divider>
       <div class="outlet-content">
-        <router-outlet (nameChange)="showNewName($event)"></router-outlet>
+        <router-outlet (activate)="onActivate($event)"></router-outlet>
       </div>
     </main>
     <footer class="footer">
       <div class="footer-container">
-        طراحی و پیاده سازی شده توسط مجتبی عرفان راد 😄❤
+        طراحی و پیاده سازی شده توسط مجتبی عرفان راد 😄💖
       </div>
     </footer>
   </mat-sidenav-content>
