--- a/src/app/main/components/main-page/main-page.component.html
+++ b/src/app/main/components/main-page/main-page.component.html
@@ -17,7 +17,7 @@
     </section>
     <section class="works">
       <div class="works-title-container">
-        <a href="#" class="works-title">
+        <a href="/works" class="works-title">
           نمونه کار ها
           <span class="material-symbols-rounded"> arrow_left_alt </span>
         </a>
@@ -44,7 +44,7 @@
     </section>
     <section class="posts">
       <div class="posts-title-container">
-        <a href="#" class="posts-title">
+        <a href="/posts" class="posts-title">
           نوشته ها
           <span class="material-symbols-rounded"> arrow_left_alt </span>
         </a>
@@ -79,7 +79,7 @@
     </section>
     <section class="store">
       <div class="store-title-container">
-        <a href="#" class="store-title">
+        <a href="/store" class="store-title">
           فروشگاه
           <span class="material-symbols-rounded"> arrow_left_alt </span>
         </a>
