--- a/src/app/main/components/main-page/main-page.component.html
+++ b/src/app/main/components/main-page/main-page.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="card">
+
     <section class="about">
       <img
         src="{{ aboutMeImage }}"
@@ -54,7 +53,7 @@
       <div class="posts-container">
         @for (post of posts; track $index) {
         <div class="post-card">
-          <img src="{{ post.img }}" alt="" class="post-image" />
+          <img src="{{ post.image }}" alt="" class="post-image" />
           <div class="post-detail">
             <h4
               class="post-title"
@@ -89,7 +88,7 @@
       <div class="store-container">
         @for (product of products; track $index) {
         <div class="product-card">
-          <img src="{{ product.img }}" alt="" class="product-image" />
+          <img src="{{ product.image }}" alt="" class="product-image" />
           <div class="product-detail">
             <h4
               class="product-title"
@@ -170,5 +169,3 @@
         </div>
       </div>
     </section>
-  </div>
-</div>
