--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 
   --small-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.07),
     0 10px 20px -2px rgba(0, 0, 0, 0.04);
+  --secondary-text-color: #c7c6ca;
 
   body[data-theme="light"] {
     @include mat.all-component-colors(theme.$light-theme);
@@ -25,6 +26,8 @@
     --card-background: #f2f0f4;
     --card-image-bg: #fff;
     --card-border-color: #acaaaf;
+
+    --secondary-text-color: #46464a;
   }
 }
 
