fix(single-page): fixed product and post page

--- a/src/app/works/components/work-page/work-page.component.html
+++ b/src/app/works/components/work-page/work-page.component.html
@@ -1,1 +1,9 @@
-<p>work-page works!</p>
+<div class="card">
+  <section class="details-container">
+    <div>
+      <img src="{{ work.image }}" alt="{{ work.title }}" class="top-image" />
+    </div>
+    <div class="details"></div>
+  </section>
+  <div class="work-text" id="work-text"></div>
+</div>
