--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@
   body[data-theme="light"] {
     @include mat.all-component-colors(theme.$light-theme);
 
+    --mat-app-text-color: #2e3038;
+    --mat-sidenav-content-text-color: #3a3b43;
     --mat-sidenav-content-background-color: #efedf1;
     --mat-sidenav-container-background-color: #f2f0f4;
 
@@ -27,7 +29,7 @@
     --card-image-bg: #fff;
     --card-border-color: #acaaaf;
 
-    --secondary-text-color: #46464a;
+    --secondary-text-color: #51525b;
   }
 }
 
