fix(single-page): fixed works page

--- a/src/app/posts/components/post-page/post-page.component.html
+++ b/src/app/posts/components/post-page/post-page.component.html
@@ -18,7 +18,7 @@
           <span class="text">{{ post.commentCount }}</span>
         </span>
       </div>
-      <div id="post-text" class="post-text"></div>
+      <div [innerHTML]="post.description" class="post-text"></div>
     </div>
   </div>
 </div>
