--- a/src/app/store/components/product-page/product-page.component.html
+++ b/src/app/store/components/product-page/product-page.component.html
@@ -45,5 +45,5 @@
     </div>
   </section>
   <hr />
-  <div id="product-text" class="product-text"></div>
+  <div [innerHTML]="product.description" class="product-text"></div>
 </div>
