--- a/src/app/works/components/work-page/work-page.component.scss
+++ b/src/app/works/components/work-page/work-page.component.scss
@@ -18,6 +18,41 @@
         box-shadow: var(--small-shadow);
         width: 20rem;
       }
+
+      .details {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: center;
+
+        .tags {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+        }
+      }
+    }
+
+    hr {
+      border-style: dashed;
+    }
+
+    .description {
+      padding-block-start: 1.5rem;
+      display: flex;
+      gap: 0.75rem;
+      flex-direction: column;
+
+      h3 {
+        font-size: 1.35rem;
+        padding-block-end: 0.25rem;
+      }
+
+      .full-picture {
+        border-radius: 1rem;
+        box-shadow: var(--small-shadow);
+        width: 100%;
+      }
     }
   }
 }
