--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -146,3 +146,32 @@
     }
   }
 }
+.basket {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .basket-item {
+    display: flex;
+    gap: 1rem;
+
+    .product-image {
+      width: 5rem;
+      box-shadow: var(--small-shadow);
+      border-radius: 0.15rem;
+    }
+
+    .product-details {
+      width: 15rem;
+      display: flex;
+      gap: 0.5rem;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
+  a {
+    border-radius: 0.15rem;
+  }
+}
