--- a/src/app/main/components/main-page-contact/main-page-contact.component.html
+++ b/src/app/main/components/main-page-contact/main-page-contact.component.html
@@ -1,50 +1,48 @@
-
 <section class="contact" id="تماس-با-من">
-    <div class="contact-title-container">
-      <a href="#تماس-با-من" class="contact-title">
-        تماس با من
-        <span class="material-symbols-rounded"> arrow_left_alt </span>
-      </a>
+  <div class="contact-title-container">
+    <a href="#تماس-با-من" class="contact-title">
+      تماس با من
+      <span class="material-symbols-rounded"> arrow_left_alt </span>
+    </a>
+  </div>
+  <div class="contact-form-container">
+    <form class="contact-form">
+      <mat-form-field appearance="fill">
+        <mat-label>شماره تماس</mat-label>
+        <input matInput />
+        <span class="material-symbols-rounded" matSuffix> phone </span>
+        <mat-hint>مثال: 09123456789</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>ایمیل*</mat-label>
+        <input matInput />
+        <span class="material-symbols-rounded" matSuffix> mail </span>
+        <mat-hint>مثال: {{ "mail@example.com" }}</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>پیام*</mat-label>
+        <textarea matInput rows="5"></textarea>
+        <span class="material-symbols-rounded" matSuffix> chat </span>
+        <mat-hint>لطفا رمزی پیام ندید 😂</mat-hint>
+      </mat-form-field>
+      <button mat-flat-button type="submit">ارسال</button>
+    </form>
+    <div class="contact-form-description">
+      <span [innerHTML]="contactMe.message"></span>
+      <p class="contact-details">
+        <strong class="contact-details-title">
+          <span class="material-symbols-rounded"> mail </span> ایمیل :
+        </strong>
+        <a href="mailto:{{ contactMe.email }}">{{ contactMe.email }}</a>
+      </p>
+      <p class="contact-details">
+        <strong class="contact-details-title">
+          <span class="material-symbols-rounded"> phone </span> شماره تماس :
+        </strong>
+        <a href="tel:+{{ contactMe.phoneNumber }}">
+          {{ contactMe.phoneNumber }}
+        </a>
+      </p>
     </div>
-    <div class="contact-form-container">
-      <form class="contact-form">
-        <mat-form-field appearance="fill">
-          <mat-label>شماره تماس</mat-label>
-          <input matInput />
-          <span class="material-symbols-rounded" matSuffix> phone </span>
-          <mat-hint>مثال: 09123456789</mat-hint>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>ایمیل*</mat-label>
-          <input matInput />
-          <span class="material-symbols-rounded" matSuffix> mail </span>
-          <mat-hint>مثال: {{ "mail@example.com" }}</mat-hint>
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>پیام*</mat-label>
-          <textarea matInput rows="5"></textarea>
-          <span class="material-symbols-rounded" matSuffix> chat </span>
-          <mat-hint>لطفا رمزی پیام ندید 😂</mat-hint>
-        </mat-form-field>
-        <button mat-flat-button type="submit">ارسال</button>
-      </form>
-      <div class="contact-form-description">
-        <p>سلام، وقت بخیر.</p>
-        <p>لطفا پس از شنیدن صدای بوق پیغام خود را بگذارید.</p>
-        <strong>*بیب*</strong>
-        <p class="contact-details">
-          <strong class="contact-details-title">
-            <span class="material-symbols-rounded"> mail </span> ایمیل :
-          </strong>
-          {{ "mojerf@yahoo.com" }}
-        </p>
-        <p class="contact-details">
-          <strong class="contact-details-title">
-            <span class="material-symbols-rounded"> phone </span> شماره تماس :
-          </strong>
-          09134456789
-        </p>
-      </div>
-    </div>
-  </section>
-  
+  </div>
+</section>
