--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -141,13 +141,13 @@
     }
   }
 }
-.basket {
+.cart {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 
-  .basket-item {
+  .cart-item {
     display: flex;
     gap: 1rem;
 
