fear(login): added login files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,13 @@
       <div class="mainTop">
         <h1 class="title">{{ pageTitle }}</h1>
         <div class="toolbar">
+          <a
+            class="toolbarButton"
+            routerLink="/login"
+            matTooltip="ورود/ثبت نام"
+          >
+            <span class="material-symbols-rounded">person</span>
+          </a>
           <button
             type="button"
             class="toolbarButton"
