--- a/src/app/cart/components/cart-main/cart.component.html
+++ b/src/app/cart/components/cart-main/cart.component.html
@@ -37,6 +37,10 @@
       </td>
     </tr>
     }
+    <tr>
+      <td colspan="2">جمع کل :</td>
+      <td colspan="2">{{ sumPrice.toLocaleString() }} تومان</td>
+    </tr>
   </table>
   <a routerLink="/cart" mat-flat-button class="purchase-button">پرداخت</a>
   }@else {
