fix(folder): fixed public folder files

--- a/src/app/user/components/login/login.component.html
+++ b/src/app/user/components/login/login.component.html
@@ -1,1 +1,4 @@
 <p>login works!</p>
+<canvas riv="vehicles" width="500" height="500">
+  <riv-animation name="idle" play></riv-animation>
+</canvas>
