--- a/src/app/user/components/login/login.component.html
+++ b/src/app/user/components/login/login.component.html
@@ -1,4 +1,57 @@
-<p>login works!</p>
-<canvas riv="vehicles" width="500" height="500">
-  <riv-animation name="idle" play></riv-animation>
-</canvas>
+<div class="container">
+  <div class="login">
+    <div class="title">
+      <h3>ورود</h3>
+    </div>
+    <form>
+      <mat-form-field appearance="fill">
+        <mat-label>ایمیل*</mat-label>
+        <input matInput />
+        <span class="material-symbols-rounded" matSuffix> mail </span>
+        <mat-hint>مثال: {{ "mail@example.com" }}</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>رمز عبور*</mat-label>
+        <input matInput type="password" />
+        <span class="material-symbols-rounded" matSuffix> password </span>
+      </mat-form-field>
+      <div>
+        <button type="submit" mat-flat-button>ورود</button>
+      </div>
+    </form>
+    <a mat-button> <u>رمزمو فراموش کردم!</u></a>
+  </div>
+  <div class="divider"></div>
+  <div class="register">
+    <div class="title">
+      <h3>ثبت نام</h3>
+    </div>
+    <form>
+      <mat-form-field appearance="fill">
+        <mat-label>ایمیل*</mat-label>
+        <input matInput />
+        <span class="material-symbols-rounded" matSuffix> mail </span>
+        <mat-hint>مثال: {{ "mail@example.com" }}</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>شماره تماس</mat-label>
+        <input matInput />
+        <span class="material-symbols-rounded" matSuffix> phone </span>
+        <mat-hint>مثال: 09123456789</mat-hint>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>رمز عبور*</mat-label>
+        <input matInput type="password" />
+        <span class="material-symbols-rounded" matSuffix> password </span>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>تکرار رمز عبور*</mat-label>
+        <input matInput type="password" />
+        <span class="material-symbols-rounded" matSuffix> password_2 </span>
+      </mat-form-field>
+      <div>
+        <button type="submit" mat-flat-button>ثبت نام</button>
+      </div>
+    </form>
+  </div>
+</div>
