fix(dashboard): dashboard now works.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,7 +103,11 @@
     </main>
     <footer class="footer">
       <div class="footer-container">
-        طراحی و پیاده سازی شده توسط مجتبی عرفان راد 😄💖
+        طراحی و پیاده سازی شده توسط
+        <a href="https://wmer.ir" target="_blank" rel="noopener noreferrer"
+          ><u>مجتبی عرفان راد</u></a
+        >
+        😄💖
       </div>
     </footer>
   </mat-sidenav-content>
