feat(dashboard): added orders and settings and fixed some styles

--- a/src/app/posts/components/posts-main/posts-main.component.scss
+++ b/src/app/posts/components/posts-main/posts-main.component.scss
@@ -5,7 +5,7 @@
     .posts-container {
       display: grid;
       gap: 1rem;
-      grid-template-columns: auto auto auto auto;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
 
       .post-card {
         width: 100%;
