--- a/src/app/cart/components/cart-main/cart.component.html
+++ b/src/app/cart/components/cart-main/cart.component.html
@@ -7,7 +7,7 @@
       <th>قیمت</th>
       <th>حذف</th>
     </tr>
-    @for (product of cartItems; track product.id;let last=$last) {
+    @for (product of cartItems; track product.id) {
     <tr>
       <td class="image-container">
         <a routerLink="/store/{{ product.url }}">
