--- a/src/app/main/components/main-page-store/main-page-store.component.scss
+++ b/src/app/main/components/main-page-store/main-page-store.component.scss
@@ -20,7 +20,7 @@
     .store-container {
       display: grid;
       gap: 1rem;
-      grid-template-columns: auto auto auto auto;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
 
       .product-card {
         width: 100%;
