--- a/src/app/store/components/store-main/store-main.component.scss
+++ b/src/app/store/components/store-main/store-main.component.scss
@@ -5,7 +5,7 @@
     .store-container {
       display: grid;
       gap: 1rem;
-      grid-template-columns: auto auto auto auto;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
 
       .product-card {
         width: 100%;
