--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,7 +67,9 @@ body {
   font-family: IRANSansX, Roboto, "Helvetica Neue", sans-serif;
   margin: 0;
   * {
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
   }
   a {
     text-decoration: none;
@@ -98,6 +100,7 @@ body {
 
   .mdc-floating-label {
     font-family: IRANSansX !important;
+    transform-origin: right top;
   }
 }
 
